--- a/PhotoPromoApp/client/src/App.css
+++ b/PhotoPromoApp/client/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.imgPreview {
+  text-align: center;
+  margin: 5px 15px;
+  max-height: 10%;
+  max-width: 30%;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  border-top: 5px solid gray;
+  border-bottom: 5px solid gray;
+}
+  img {
+    width: 100%;
+    height: 100%;
+}
