got photo delete working again, had to move some logic to the backend to avoid callign the server 2x during delete, state for gallery is workign well, maybe not perfect, state for photo is deleting, but edit is not updating correctly, added photo details button for larger view via modal with photo details, also added photo detail tooltip on gallery images

--- a/PhotoPromoApp/client/src/App.css
+++ b/PhotoPromoApp/client/src/App.css
@@ -52,7 +52,20 @@
     width: 100%;
     height: 100%;
 }
-.fixNavbar {
-/* position: fixed; Set the navbar to fixed position */
-  /* top: 0; */
+
+/* .custom-modal-style {
+  width: 2000px;
+  min-height: 100vr;
+  } */
+
+  .modal-full {
+    min-width: 20%;
+    margin-left: 80;
+}
+
+.modal-content  {
+    min-height: 50vh;
+    min-width: 50vw;
+    max-width: 80vw;
+
 }
