fixed image upload issue for when user selects image and then reselects only to cancel from within the file input dialog

--- a/PhotoPromoApp/client/src/App.css
+++ b/PhotoPromoApp/client/src/App.css
@@ -60,10 +60,11 @@
 
   .modal-full {
     min-width: 20%;
-    margin-left: 80;
+    /* margin-left: 80; */
 }
 
 .modal-content  {
+  
     min-height: 50vh;
     min-width: 50vw;
     max-width: 80vw;
